tests/snapshots/raw__examples_in_informal_reference-15.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"let\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 3,
        },
    ],
)
