tests/snapshots/raw__examples_in_informal_reference-18.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"mod\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 3,
        },
    ],
)
