tests/snapshots/raw__examples_in_informal_reference-2.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"break\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 5,
        },
    ],
)
