tests/snapshots/raw__examples_in_informal_reference-23.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"return\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 6,
        },
    ],
)
